@@ -1,3 +1,11 @@
+2005-09-14  Irene Huang <Irene.Huang@sun.com>
+
+	Fix for #316274
+
+	* exchange-account-setup.c: (btn_chpass_clicked),
+	(org_gnome_exchange_settings): Enable change password function only 
+	when built with kerberos5.  
+
 2005-08-29  Praveen Kumar  <kpraveen@novell.com>
 
 	** Fixes bug 314762
